--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,6 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "ejs": "^2.5.2",
-    "express": "^4.14.0",
-    "memory-cache": "^0.1.6"
+    "express": "^4.14.0"
   }
 }
